@@ -2684,6 +2684,24 @@ $dbi->insert({key1 => 2}, table => 'table1', type_rule_off => 1);
 $result = $dbi->select(table => 'table1', type_rule_off => 1);
 is($result->one->{key1}, 2);
 
+$dbi = DBIx::Custom->connect(dsn => 'dbi:SQLite:dbname=:memory:');
+$dbi->execute("create table table1 (key1 Date, key2 datetime)");
+$dbi->register_filter(ppp => sub { uc $_[0] });
+$dbi->type_rule(
+    into => {
+        Date => 'ppp'
+    }
+);
+$dbi->insert({key1 => 'a'}, table => 'table1');
+$result = $dbi->select(table => 'table1');
+is($result->one->{key1}, 'A');
+
+eval{$dbi->type_rule(
+    into => {
+        Date => 'pp'
+    }
+)};
+like($@, qr/not registered/);
 
 test 'result_filter';
 $dbi = DBIx::Custom->connect($NEW_ARGS->{0});
@@ -2720,5 +2738,55 @@ $result = $model->select(
 is_deeply($result->one,
           {key1 => 2, key2 => 2, 'table2.key1' => 3, 'table2.key3' => 9});
 is_deeply($model2->select->one, {key1 => 3, key3 => 9});
+
+test 'filter_off';
+$dbi = DBIx::Custom->connect($NEW_ARGS->{0});
+$dbi->execute($CREATE_TABLE->{0});
+$dbi->execute($CREATE_TABLE->{2});
+
+$dbi->create_model(
+    table => 'table1',
+    join => [
+       'left outer join table2 on table1.key1 = table2.key1'
+    ],
+    primary_key => ['key1'],
+    result_filter => {
+        key1 => sub { $_[0] * 2 }
+    },
+);
+$model2 = $dbi->create_model(
+    table => 'table2',
+    result_filter => [
+        [qw/key1 key3/] => sub { $_[0] * 3 }
+    ]
+);
+$dbi->setup_model;
+$dbi->insert(table => 'table1', param => {key1 => 1, key2 => 2});
+$dbi->insert(table => 'table2', param => {key1 => 1, key3 => 3});
+$model = $dbi->model('table1');
+$result = $model->select(
+    column => [
+        $model->mycolumn,
+        {table2 => [qw/key1 key3/]}
+    ],
+    where => {'table1.key1' => 1}
+);
+$result->filter_off(1);
+$result->end_filter(key1 => sub { $_[0] * 5});
+is_deeply($result->one,
+          {key1 => 1, key2 => 2, 'table2.key1' => 1, 'table2.key3' => 3});
+
+$result = $model->select(
+    column => [
+        $model->mycolumn,
+        {table2 => [qw/key1 key3/]}
+    ],
+    where => {'table1.key1' => 1}
+);
+$result->filter_off(1);
+$result->end_filter(key1 => sub { $_[0] * 5});
+
+is_deeply($result->fetch_first,
+          [1, 2, 1, 3]);
 
 =cut
